--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Engineering Ladders
+title: Engineering Career Framework
 description: A framework for Engineering Managers
